--- a/FileLab/FileLab.csproj
+++ b/FileLab/FileLab.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DatabaseExport.Designer.cs">
       <DependentUpon>DatabaseExport.cs</DependentUpon>
     </Compile>
+    <Compile Include="login.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadFile.cs">
@@ -60,6 +61,13 @@
     </Compile>
     <Compile Include="ReadFile.Designer.cs">
       <DependentUpon>ReadFile.cs</DependentUpon>
+    </Compile>
+    <Compile Include="sqlConnect.cs" />
+    <Compile Include="sqlLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sqlLogin.Designer.cs">
+      <DependentUpon>sqlLogin.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="DatabaseExport.resx">
       <DependentUpon>DatabaseExport.cs</DependentUpon>
@@ -75,6 +83,9 @@
     </Compile>
     <EmbeddedResource Include="ReadFile.resx">
       <DependentUpon>ReadFile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sqlLogin.resx">
+      <DependentUpon>sqlLogin.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
